--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -5,7 +5,6 @@
  */
 
 /* Global Styles */
-
 html, body {
   width: 100%;
   height: 100%;
@@ -157,7 +156,7 @@ hr.small {
   display: table;
   width: 100%;
   height: 100%;
-  background: url(../img/desk.jpg) no-repeat center center scroll;
+  background: url(../resource/img/desk.jpg) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -190,7 +189,7 @@ hr.small {
   width: 100%;
   height: 400px;
   color: #fff;
-  background: url(../img/githubdash.png) no-repeat center center scroll;
+  background: url(../resource/img/githubdash.png) no-repeat center center scroll;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -243,6 +242,10 @@ hr.small {
 .map iframe {
   pointer-events: none;
 }
+
+.pdfobject-container {
+  height: 1000px;
+};
 
 
 /* Footer */
